# usd-opinion-trace

./: .gitignore  README.md  pyproject.toml  requirements.txt  usd_opinion_trace.py  usd_opinion_trace_gui.py
.github/workflows/: test.yml
sample_scene/: README.md  shot.usda
sample_scene/assets/avocado/: avocado.usda  avocado_geo.usda
sample_scene/classes/: _class.usda
src/opinion_trace/: cli.py  diagnosis.py  extraction.py  helpful_texts.py  reason_codes.py
tests/: conftest.py  test_cli.py
tests/fixtures/shared/: inherit_class.usda  ref_target.usda  sublayer_strong.usda  sublayer_weak.usda  sublayer_with_timesamples.usda
tests/fixtures/stages/: stage_default_vs_timesamples.usda  stage_fallback_only.usda  stage_inherit_over_reference.usda  stage_inherit_over_variant.usda  stage_local_over_inherit.usda  stage_local_over_payload.usda  stage_local_over_reference.usda  stage_local_over_specialize.usda  stage_local_over_variant.usda  stage_prim_deactivated.usda  stage_reference_order.usda  stage_reference_over_payload.usda  stage_simple.usda  stage_sublayer_order.usda  stage_value_blocked.usda  stage_variant_over_payload.usda  stage_variant_over_reference.usda
