[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usd-opinion-trace"
version = "0.1.0"
description = "CLI and GUI tool for tracing USD attribute opinion resolution"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["usd", "openusd", "pixar", "composition", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "usd-core>=23.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
usd-opinion-trace = "usd_opinion_trace:main"
usd-opinion-trace-gui = "usd_opinion_trace_gui:main"

[tool.setuptools]
py-modules = ["usd_opinion_trace", "usd_opinion_trace_gui"]
packages = ["opinion_trace"]
package-dir = {"opinion_trace" = "src/opinion_trace"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
